lib/lang/src/compile/type_inference/snapshots/lang__compile__type_inference__type_inferrer__tests__fail_to_infer_types_with_invalid_union_type.snap
---
source: lib/lang/src/compile/type_inference/type_inferrer.rs
expression: infer_types(&module)
---
Err(
    TypesNotMatched(
        SourceInformation {
            source_name: "",
            location: Location {
                line_number: 0,
                column_number: 0,
            },
            line: "",
        },
        SourceInformation {
            source_name: "",
            location: Location {
                line_number: 0,
                column_number: 0,
            },
            line: "",
        },
    ),
)
