lib/lang/src/compile/type_inference/snapshots/lang__compile__type_inference__type_inferrer__tests__infer_types_of_let_with_recursive_functions_and_the_former_typed.snap
---
source: lib/lang/src/compile/type_inference/type_inferrer.rs
expression: "infer_types(&Module::from_definitions(vec![VariableDefinition ::\n                                           new(\"x\", LetRecursive ::\n                                               new(vec !\n                                                   [FunctionDefinition ::\n                                                    new(\"f\", vec !\n                                                        [\"x\" . into()],\n                                                        Application ::\n                                                        new(Variable ::\n                                                            new(\"g\",\n                                                                SourceInformation\n                                                                :: dummy()),\n                                                            Variable ::\n                                                            new(\"x\",\n                                                                SourceInformation\n                                                                :: dummy()),\n                                                            SourceInformation\n                                                            :: dummy(),),\n                                                        types :: Function ::\n                                                        new(types :: Number ::\n                                                            new(SourceInformation\n                                                                :: dummy()),\n                                                            types :: Number ::\n                                                            new(SourceInformation\n                                                                :: dummy()),\n                                                            SourceInformation\n                                                            :: dummy(),),\n                                                        SourceInformation ::\n                                                        dummy()),\n                                                    FunctionDefinition ::\n                                                    new(\"g\", vec !\n                                                        [\"x\" . into()],\n                                                        Application ::\n                                                        new(Variable ::\n                                                            new(\"f\",\n                                                                SourceInformation\n                                                                :: dummy()),\n                                                            Variable ::\n                                                            new(\"x\",\n                                                                SourceInformation\n                                                                :: dummy()),\n                                                            SourceInformation\n                                                            :: dummy(),),\n                                                        types :: Unknown ::\n                                                        new(SourceInformation\n                                                            :: dummy()),\n                                                        SourceInformation ::\n                                                        dummy())], Application\n                                                   ::\n                                                   new(Variable ::\n                                                       new(\"f\",\n                                                           SourceInformation\n                                                           :: dummy()), Number\n                                                       ::\n                                                       new(42.0,\n                                                           SourceInformation\n                                                           :: dummy()),\n                                                       SourceInformation ::\n                                                       dummy()),\n                                                   SourceInformation ::\n                                                   dummy(),), types :: Number\n                                               ::\n                                               new(SourceInformation ::\n                                                   dummy()), SourceInformation\n                                               :: dummy(),) . into()]))"
---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [],
        definitions: [
            VariableDefinition(
                VariableDefinition {
                    name: "x",
                    body: LetRecursive(
                        LetRecursive {
                            definitions: [
                                FunctionDefinition {
                                    name: "f",
                                    arguments: [
                                        "x",
                                    ],
                                    body: Application(
                                        Application {
                                            function: Variable(
                                                Variable {
                                                    name: "g",
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            argument: Variable(
                                                Variable {
                                                    name: "x",
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    type_: Function(
                                        Function {
                                            argument: Number(
                                                Number {
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            result: Number(
                                                Number {
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                                FunctionDefinition {
                                    name: "g",
                                    arguments: [
                                        "x",
                                    ],
                                    body: Application(
                                        Application {
                                            function: Variable(
                                                Variable {
                                                    name: "f",
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            argument: Variable(
                                                Variable {
                                                    name: "x",
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    type_: Function(
                                        Function {
                                            argument: Number(
                                                Number {
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            result: Number(
                                                Number {
                                                    source_information: SourceInformation {
                                                        source_name: "",
                                                        location: Location {
                                                            line_number: 0,
                                                            column_number: 0,
                                                        },
                                                        line: "",
                                                    },
                                                },
                                            ),
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ],
                            expression: Application(
                                Application {
                                    function: Variable(
                                        Variable {
                                            name: "f",
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    argument: Number(
                                        Number {
                                            value: 42.0,
                                            source_information: SourceInformation {
                                                source_name: "",
                                                location: Location {
                                                    line_number: 0,
                                                    column_number: 0,
                                                },
                                                line: "",
                                            },
                                        },
                                    ),
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    type_: Number(
                        Number {
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
        ],
        export: Export {
            names: {},
        },
        imports: [],
        import_foreigns: [],
    },
)
